Modifique el html de titles y los estilos

--- a/index.html
+++ b/index.html
@@ -12,33 +12,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-  
   <!-- Barra de navegacion -->
-  <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <h3 class="marca">D10S</h3>
-        <a class="navbar-brand" href="index.html"><img src="images/logomessi.png" alt="" id="logomessi"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="pages/ballondor.html" id="ballondor">BalonesdeOro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="pages/goals.html">Goles</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="pages/goldenboots.html">BotasdeOro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="pages/titles.html">Titulos</a>
-            </li>
-          </ul>  
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <h3 class="marca">D10S</h3>
+          <a class="navbar-brand" href="index.html"><img src="images/logomessi.png" alt="" id="logomessi"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="pages/ballondor.html" id="ballondor">BalonesdeOro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="pages/goals.html">Goles</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="pages/goldenboots.html">BotasdeOro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="pages/titles.html">Titulos</a>
+              </li>
+            </ul>  
+          </div>
         </div>
-      </div>
-  </nav>
+    </nav>
+  </header>
   
   <!-- Carrusel para poder ver imagenes en sus distintas etapas de su carrera-->
   <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
