--- a/pages/titles.html
+++ b/pages/titles.html
@@ -40,6 +40,68 @@
         </div>
     </nav>
 
+    <!-- NEWS CARDS -->
+    <div class="news-cards">
+        <div>
+            <img src="../img/CLUBWORLDCUP.png" alt="" />
+            <h3>3X COPA MUNDIAL DE CLUBES</h3>
+        </div>
+        <div>
+            <img src="../img/COPAAMERICA.png" alt="" />
+            <h3>1X COPA AMERICA</h3>
+        </div>
+        <div>
+            <img src="../img/CHAMPIONSLEAGUE.png" alt="" />
+            <h3>4X CHAMPIONS LEAGUE</h3>
+        </div>
+        <div>
+            <img src="../img/SPANISHCHAMPION.png" alt="" />
+            <h3>10X CAMPEON DE ESPAÑA</h3>
+        </div>
+    </div>
+
+    <!-- NEWS CARDS -->
+    <div class="news-cards">
+        <div>
+            <img src="../img/FRENCHCHAMPION.png" alt="" />
+            <h3>1X CAMPEON DE FRANCIA</h3>
+        </div>
+        <div>
+            <img src="../img/UEFASUPERCUP.png" alt="" />
+            <h3>3X SUPERCOPA DE LA UEFA</h3>
+        </div>
+        <div>
+            <img src="../img/SPANISHCUP.png" alt="" />
+            <h3>7X COPA DE ESPAÑA</h3>
+        </div>
+        <div>
+            <img src="../img/SPANISHSUPERCUP.png" alt="" />
+            <h3>8X SUPERCOPA DE ESPAÑA</h3>
+        </div>
+    </div>
+
+    <!-- NEWS CARDS -->
+    <div class="news-cards">
+        <div>
+            <img src="../img/UNDER20WORLDCUPCHAMPION.png" alt="" />
+            <h3>1X CAMPEONA MUNDIAL SUB-20</h3>
+        </div>
+        <div>
+            <img src="../img/CONMEBOLUEFACUPOFCHAMPIONS.png" alt="" />
+            <h3>1X CONMEBOL-COPA DE CAMPEONES DE LA UEFA</h3>
+        </div>
+        <div>
+            <img src="../img/FRENCHSUPERCUP.png" alt="" />
+            <h3>1X SUPERCOPA DE FRANCIA</h3>
+        </div>
+        <div>
+            <img src="../img/OLYMPICMEDALIST.png" alt="" />
+            <h3>1X MEDALLISTA OLÍMPICO</h3>
+        </div>
+    </div>   
+
+
+
     <!-- Follow -->
     <section class="social">
         <div class="links">
