--- a/pages/goldenboots.html
+++ b/pages/goldenboots.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     
-  <!-- Barra de navegacion -->
-  <nav class="navbar navbar-expand-lg bg-light">
+    <!-- Barra de navegacion -->
+    <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <h3 class="marca">D10S</h3>
         <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
@@ -38,30 +38,68 @@
         </ul>  
         </div>
     </div>
-  </nav>
+    </nav>
 
-  <!-- Follow -->
-  <section class="social">
-      <div class="links">
-      <a href="https://www.instagram.com/leomessi">
-          <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://twitter.com/Emijrodriguez">
-          <i class="fab fa-twitter"></i>
-      </a>
-      <a href="https://github.com/EmiRodriguez23">
-          <i class="fab fa-github"></i>
-      </a>
-      </div>
-  </section>
+    <!-- NEWS CARDS -->
+    <div class="news-cards">
+        <div>
+          <img src="../images/messi2010goldenboot.jpg" alt="" />
+          <h3>1ra Bota de Oro de Messi (2010)</h3>
+        </div>
+        <div>
+          <img src="../images/messi2011goldenboot.jpg" alt="" />
+          <h3>2da Bota de Oro de Messi (2011)</h3>
+        </div>
+        <div>
+          <img src="../images/messi2013goldenboot.jpg" alt="" />
+          <h3>3ra Bota de Oro de Messi (2013)</h3>
+        </div>
+    </div>
 
-  <!-- Footer -->
-  <footer class="footer">
-      <h4>D10S Copyright</h4>
-  </footer>
+    <!-- NEWS CARDS -->
+    <div class="news-cards">
+        <div>
+            <img src="../images/messi2017goldenboot.jpeg" alt="" />
+            <h3>4ta Bota de Oro de Messi (2017)</h3>
+        </div>
+        <div>
+            <img src="../images/messi2018goldenboot.jpg" alt="" />
+            <h3>5ta Bota de Oro de Messi (2018)</h3>
+        </div>
+        <div>
+            <img src="../images/messi2019goldenboot.webp" alt="" />
+            <h3>6ta Bota de Oro de Messi (2019)</h3>
+        </div>
+    </div>
 
-  <!-- Bibloteca de boostrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <!-- Card Banner 1-->
+    <section class="cards-banner-one">
+        <div class="content">
+        </div>
+    </section>
+
+    <!-- Follow -->
+    <section class="social">
+        <div class="links">
+        <a href="https://www.instagram.com/leomessi">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/Emijrodriguez">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://github.com/EmiRodriguez23">
+            <i class="fab fa-github"></i>
+        </a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <h4>D10S Copyright</h4>
+    </footer>
+
+    <!-- Bibloteca de boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </nav>
 </body>
 </html>
