Se implemento tecnicas de SEO como meta tags

--- a/pages/goldenboots.html
+++ b/pages/goldenboots.html
@@ -10,73 +10,79 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="description" content="Lionel Messi">
+    <meta name="keywords" content="D10S, Leo, Messi, Lionel Messi, Ballon de oro">
 </head>
 <body>
     
     <!-- Barra de navegacion -->
-    <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-        <h3 class="marca">D10S</h3>
-        <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../pages/ballondor.html" id="ballondor">BalonesdeOro</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link active" href="../pages/goals.html">Goles</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link active" href="../pages/goldenboots.html">BotasdeOro</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link active" href="../pages/titles.html">Titulos</a>
-            </li>
-        </ul>  
-        </div>
-    </div>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <h3 class="marca">D10S</h3>
+                <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/ballondor.html" id="ballondor">BalonesdeOro</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="../pages/goals.html">Goles</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="../pages/goldenboots.html">BotasdeOro</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="../pages/titles.html">Titulos</a>
+                    </li>
+                </ul>  
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <!-- NEWS CARDS -->
-    <div class="news-cards">
-        <div>
-          <img src="../images/messi2010goldenboot.jpg" alt="" />
-          <h3>1ra Bota de Oro de Messi (2010)</h3>
+    <main>
+        <div class="news-cards">
+            <div>
+            <img src="../images/messi2010goldenboot.jpg" alt="" />
+            <h3>1ra Bota de Oro de Messi (2010)</h3>
+            </div>
+            <div>
+            <img src="../images/messi2011goldenboot.jpg" alt="" />
+            <h3>2da Bota de Oro de Messi (2011)</h3>
+            </div>
+            <div>
+            <img src="../images/messi2013goldenboot.jpg" alt="" />
+            <h3>3ra Bota de Oro de Messi (2013)</h3>
+            </div>
         </div>
-        <div>
-          <img src="../images/messi2011goldenboot.jpg" alt="" />
-          <h3>2da Bota de Oro de Messi (2011)</h3>
-        </div>
-        <div>
-          <img src="../images/messi2013goldenboot.jpg" alt="" />
-          <h3>3ra Bota de Oro de Messi (2013)</h3>
-        </div>
-    </div>
 
-    <!-- NEWS CARDS -->
-    <div class="news-cards">
-        <div>
-            <img src="../images/messi2017goldenboot.jpeg" alt="" />
-            <h3>4ta Bota de Oro de Messi (2017)</h3>
+        <!-- NEWS CARDS -->
+        <div class="news-cards">
+            <div>
+                <img src="../images/messi2017goldenboot.jpeg" alt="" />
+                <h3>4ta Bota de Oro de Messi (2017)</h3>
+            </div>
+            <div>
+                <img src="../images/messi2018goldenboot.jpg" alt="" />
+                <h3>5ta Bota de Oro de Messi (2018)</h3>
+            </div>
+            <div>
+                <img src="../images/messi2019goldenboot.webp" alt="" />
+                <h3>6ta Bota de Oro de Messi (2019)</h3>
+            </div>
         </div>
-        <div>
-            <img src="../images/messi2018goldenboot.jpg" alt="" />
-            <h3>5ta Bota de Oro de Messi (2018)</h3>
-        </div>
-        <div>
-            <img src="../images/messi2019goldenboot.webp" alt="" />
-            <h3>6ta Bota de Oro de Messi (2019)</h3>
-        </div>
-    </div>
 
-    <!-- Card Banner 1-->
-    <section class="cards-banner-one">
-        <div class="content">
-        </div>
-    </section>
+        <!-- Card Banner 1-->
+        <section class="cards-banner-one">
+            <div class="content">
+            </div>
+        </section>
+    </main>
 
     <!-- Follow -->
     <section class="social">
