--- a/pages/titles.html
+++ b/pages/titles.html
@@ -10,97 +10,101 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="description" content="Lionel Messi">
+    <meta name="keywords" content="D10S, Leo, Messi, Lionel Messi, Ballon de oro">
 </head>
 <body>
 
     <!-- Barra de navegacion -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <h3 class="marca">D10S</h3>
-            <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/ballondor.html" id="ballondor">BalonesdeOro</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="../pages/goals.html">Goles</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="../pages/goldenboots.html">BotasdeOro</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link active" href="../pages/titles.html">Titulos</a>
-                </li>
-            </ul>  
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <h3 class="marca">D10S</h3>
+                <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/ballondor.html" id="ballondor">BalonesdeOro</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="../pages/goals.html">Goles</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="../pages/goldenboots.html">BotasdeOro</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link active" href="../pages/titles.html">Titulos</a>
+                    </li>
+                </ul>  
+                </div>
+            </div>
+        </nav>
+    </header>       
+
+    <!-- NEWS CARDS -->
+    <main>
+        <div class="news-cards">
+            <div>
+                <img src="../img/CLUBWORLDCUP.png" alt="" />
+                <h3>3X COPA MUNDIAL DE CLUBES</h3>
+            </div>
+            <div>
+                <img src="../img/COPAAMERICA.png" alt="" />
+                <h3>1X COPA AMERICA</h3>
+            </div>
+            <div>
+                <img src="../img/CHAMPIONSLEAGUE.png" alt="" />
+                <h3>4X CHAMPIONS LEAGUE</h3>
+            </div>
+            <div>
+                <img src="../img/SPANISHCHAMPION.png" alt="" />
+                <h3>10X CAMPEON DE ESPAÑA</h3>
             </div>
         </div>
-    </nav>
 
-    <!-- NEWS CARDS -->
-    <div class="news-cards">
-        <div>
-            <img src="../img/CLUBWORLDCUP.png" alt="" />
-            <h3>3X COPA MUNDIAL DE CLUBES</h3>
+        <!-- NEWS CARDS -->
+        <div class="news-cards">
+            <div>
+                <img src="../img/FRENCHCHAMPION.png" alt="" />
+                <h3>1X CAMPEON DE FRANCIA</h3>
+            </div>
+            <div>
+                <img src="../img/UEFASUPERCUP.png" alt="" />
+                <h3>3X SUPERCOPA DE LA UEFA</h3>
+            </div>
+            <div>
+                <img src="../img/SPANISHCUP.png" alt="" />
+                <h3>7X COPA DE ESPAÑA</h3>
+            </div>
+            <div>
+                <img src="../img/SPANISHSUPERCUP.png" alt="" />
+                <h3>8X SUPERCOPA DE ESPAÑA</h3>
+            </div>
         </div>
-        <div>
-            <img src="../img/COPAAMERICA.png" alt="" />
-            <h3>1X COPA AMERICA</h3>
-        </div>
-        <div>
-            <img src="../img/CHAMPIONSLEAGUE.png" alt="" />
-            <h3>4X CHAMPIONS LEAGUE</h3>
-        </div>
-        <div>
-            <img src="../img/SPANISHCHAMPION.png" alt="" />
-            <h3>10X CAMPEON DE ESPAÑA</h3>
-        </div>
-    </div>
 
-    <!-- NEWS CARDS -->
-    <div class="news-cards">
-        <div>
-            <img src="../img/FRENCHCHAMPION.png" alt="" />
-            <h3>1X CAMPEON DE FRANCIA</h3>
-        </div>
-        <div>
-            <img src="../img/UEFASUPERCUP.png" alt="" />
-            <h3>3X SUPERCOPA DE LA UEFA</h3>
-        </div>
-        <div>
-            <img src="../img/SPANISHCUP.png" alt="" />
-            <h3>7X COPA DE ESPAÑA</h3>
-        </div>
-        <div>
-            <img src="../img/SPANISHSUPERCUP.png" alt="" />
-            <h3>8X SUPERCOPA DE ESPAÑA</h3>
-        </div>
-    </div>
-
-    <!-- NEWS CARDS -->
-    <div class="news-cards">
-        <div>
-            <img src="../img/UNDER20WORLDCUPCHAMPION.png" alt="" />
-            <h3>1X CAMPEONA MUNDIAL SUB-20</h3>
-        </div>
-        <div>
-            <img src="../img/CONMEBOLUEFACUPOFCHAMPIONS.png" alt="" />
-            <h3>1X CONMEBOL-COPA DE CAMPEONES DE LA UEFA</h3>
-        </div>
-        <div>
-            <img src="../img/FRENCHSUPERCUP.png" alt="" />
-            <h3>1X SUPERCOPA DE FRANCIA</h3>
-        </div>
-        <div>
-            <img src="../img/OLYMPICMEDALIST.png" alt="" />
-            <h3>1X MEDALLISTA OLÍMPICO</h3>
-        </div>
-    </div>   
-
-
+        <!-- NEWS CARDS -->
+        <div class="news-cards">
+            <div>
+                <img src="../img/UNDER20WORLDCUPCHAMPION.png" alt="" />
+                <h3>1X CAMPEONA MUNDIAL SUB-20</h3>
+            </div>
+            <div>
+                <img src="../img/CONMEBOLUEFACUPOFCHAMPIONS.png" alt="" />
+                <h3>1X CONMEBOL-COPA DE CAMPEONES DE LA UEFA</h3>
+            </div>
+            <div>
+                <img src="../img/FRENCHSUPERCUP.png" alt="" />
+                <h3>1X SUPERCOPA DE FRANCIA</h3>
+            </div>
+            <div>
+                <img src="../img/OLYMPICMEDALIST.png" alt="" />
+                <h3>1X MEDALLISTA OLÍMPICO</h3>
+            </div>
+        </div>   
+    </main>
 
     <!-- Follow -->
     <section class="social">
@@ -124,6 +128,5 @@
 
     <!-- Bibloteca de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
 </body>
 </html>
