--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="description" content="Lionel Messi">
+    <meta name="keywords" content="D10S, Leo, Messi, Lionel Messi, Ballon de oro">
 </head>
 <body>
   <!-- Barra de navegacion -->
@@ -42,60 +44,62 @@
   </header>
   
   <!-- Carrusel para poder ver imagenes en sus distintas etapas de su carrera-->
-  <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/messi2009.jpg" class="adjust" alt="...">
+  <main>
+    <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/messi2009.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2010.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2011.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2012.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2013.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2014.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2015.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2016.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2017.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2018.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2019.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2020.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2021.jpg" class="adjust" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/messi2022.jpg" class="adjust" alt="...">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img src="images/messi2010.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2011.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2012.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2013.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2014.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2015.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2016.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2017.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2018.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2019.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2020.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2021.jpg" class="adjust" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="images/messi2022.jpg" class="adjust" alt="...">
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  </main>
 
   <!-- Follow -->
   <section class="social">
@@ -118,6 +122,6 @@
   </footer>
 
   <!-- Bibloteca de boostrap -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
