--- a/pages/goals.html
+++ b/pages/goals.html
@@ -10,60 +10,64 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="description" content="Lionel Messi">
+    <meta name="keywords" content="D10S, Leo, Messi, Lionel Messi, Ballon de oro">
 </head>
 <body>
 
     <!-- Barra de navegacion -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <h3 class="marca">D10S</h3>
-          <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/ballondor.html" id="ballondor">BalonesdeOro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="../pages/goals.html">Goles</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="../pages/goldenboots.html">BotasdeOro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="../pages/titles.html">Titulos</a>
-              </li>
-            </ul>  
+    <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <h3 class="marca">D10S</h3>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logomessi.png" alt="" id="logomessi"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse" id="navbarScroll">
+              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../pages/ballondor.html" id="ballondor">BalonesdeOro</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="../pages/goals.html">Goles</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="../pages/goldenboots.html">BotasdeOro</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="../pages/titles.html">Titulos</a>
+                </li>
+              </ul>  
+            </div>
           </div>
-        </div>
-    </nav>
-    
-    <!-- Video de todos los goles de Messi -->
-    <iframe class="video" width="1560" height="815" src="https://www.youtube.com/embed/b9S2up2YGc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </nav>
+    </header>
 
-      <!-- Follow -->
-    <section class="social">
+  <!-- Video de todos los goles de Messi -->
+  <iframe class="video" width="1560" height="815" src="https://www.youtube.com/embed/b9S2up2YGc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <!-- Follow -->
+  <section class="social">
     <div class="links">
-    <a href="https://www.instagram.com/leomessi">
-        <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://twitter.com/Emijrodriguez">
-        <i class="fab fa-twitter"></i>
-    </a>
-    <a href="https://github.com/EmiRodriguez23">
-        <i class="fab fa-github"></i>
-    </a>
+      <a href="https://www.instagram.com/leomessi">
+          <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://twitter.com/Emijrodriguez">
+          <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://github.com/EmiRodriguez23">
+          <i class="fab fa-github"></i>
+      </a>
     </div>
-    </section>
+  </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <h4>D10S Copyright</h4>
-    </footer>
+  <!-- Footer -->
+  <footer class="footer">
+      <h4>D10S Copyright</h4>
+  </footer>
 
-    <!-- Bibloteca de boostrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+  <!-- Bibloteca de boostrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
